--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
 
-    <string name="menu_home">Profile</string>
+    <string name="menu_home">Registration</string>
     <string name="menu_gallery">Emergency Contact</string>
     <string name="menu_slideshow">Q and A</string>
 
