--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="title_activity_side_bar">SideBar</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">User Name</string>
+    <string name="nav_header_subtitle">User Email</string>
     <string name="nav_header_desc">Navigation header</string>
 
     <string name="menu_home">Registration</string>
