--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@ These App Terms and Conditions is in the form of an electronic and legally bindi
 You consent to have these App Terms and Conditions and all notices provided to You in electronic form.
 Every time You use the App, You confirm Your agreement with these App Terms and Conditions, Privacy Policy and Other Policies.\n
 ELIGIBILITY.\n
-The minimum age to use the App is 18 (eighteen) years. By using the App and in order to be competent to contract under applicable law, You represent and warrant that You are at least 18 (eighteen) years of age or not a minor in any other jurisdiction from where You access Our App.
+The minimum age to use the App is 13 (thirteen) years. By using the App and in order to be competent to contract under applicable law, You represent and warrant that You are at least 13 (thirteen) years of age or not a minor in any other jurisdiction from where You access Our App.
 By using the App, You hereby represent and warrant to Us that You have all right, authority and capacity to enter into these App Terms and Conditions and to abide by all of the terms and conditions thereof.
 \n\n
 PROPRIETARY RIGHTS.\n
@@ -174,7 +174,7 @@ When You use the App, We collect Your location. Your personal information helps 
 \n\n
 You will also be asked to allow Us to collect Your location and movement (step count) information from the device when You use the App. In addition, We may collect and store any personal information You provide while using Our App or in some other manner. You may also provide Us photos, personal description, and information about Your gender and preferences. In case any chat facility is provided through the App and if You chat with other App users, You provide Us the content of Your chats, and If You contact Us for customer service or other inquiry, You provide Us with the content of that communication.
 \n\n
-We neither knowingly collect any information nor promote Our App to any minor under the age of 18 (eighteen) years. If You are less than 18 (eighteen) years old or a minor in any other jurisdiction from where You access Our App, We request that You do not submit information to Us. If We become aware that a minor has registered with Us and provided Us with personal information, We may take steps to terminate such person’s registration and delete their account with Us.
+We neither knowingly collect any information nor promote Our App to any minor under the age of 13 (thirteen) years. If You are less than 13 (thirteen) years old or a minor in any other jurisdiction from where You access Our App, We request that You do not submit information to Us. If We become aware that a minor has registered with Us and provided Us with personal information, We may take steps to terminate such person’s registration and delete their account with Us.
 \n\n
 We use various tools and technologies, including cookies, to collect Your personal information and non-personal information from the device from which You access the App and learn about Your activities taking place under Your account when You use Our App. Such non-personal information could include Your IP address, device ID and type, Your browser type and language, operating system used by Your device, access times, Your device geographic location and the referring website address. We may use web beacons and other similar technologies to track Your use of Our App and to deliver or communicate with cookies.
 \n\n
@@ -213,7 +213,7 @@ We adopt reasonable security practices and procedures to help safeguard Your per
 
 CHILDREN\'S PRIVACY.
 \n\n
-Although Our App is a general audience App, We try Our best to restrict the use of Our App to individuals aged 18 (eighteen) years and above. We do not knowingly collect, maintain or use personal information from children under the age of 18 (eighteen) years.
+Although Our App is a general audience App, We try Our best to restrict the use of Our App to individuals aged 13 (thirteen) years and above. We do not knowingly collect, maintain or use personal information from children under the age of 13 (thirteen) years.
 
 \n\n\n
 CHANGES TO THIS PRIVACY POLICY.
@@ -224,7 +224,7 @@ We may occasionally update this Privacy Policy. When We post changes to this Pri
         FROM WHERE TO COLLECT THE DATA?
         \n\n\n
 The App uses FAQ from the source of World Health Organisation(WHO) and per their guidelines.\n
-The count is captured from the Government Authorized site of INDIA for The data is validated by a group of volunteers and published into a Google sheet and an API by api.covi19india.org.\n
+The count is captured from the Government Authorized site of INDIA for The data is validated by a group of volunteers and published into a Google sheet and an API by api.covid19india.org.\n
 We are not government officials and only intend to display the correct and validated sources based on government guidelines and have no violations for any rule.\n
         \n\n\n
 
