--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,7 +225,9 @@ We may occasionally update this Privacy Policy. When We post changes to this Pri
         \n\n\n
 The App uses FAQ from the source of World Health Organisation(WHO) and per their guidelines.\n
 The count is captured from the Government Authorized site of INDIA for The data is validated by a group of volunteers and published into a Google sheet and an API by api.covid19india.org.\n
-We are not government officials and only intend to display the correct and validated sources based on government guidelines and have no violations for any rule.\n
+We are not government officials and only intend to display the correct and validated sources based on government guidelines and have no violations for any rule.
+        \n
+        All the details and data shared in our app is from the sources mentioned in our public resources and as per WORLD HEALTH ORGANISATION guidelines. The team is not liable for any mistakes or errors displayed in the app. However\, we do take make a conscious attempt for considering the feedback received. Our efforts are to contribute to the community welfare and we don\'t intend to hurt the sentiments of any individuals.
         \n\n\n
 
 
